--- a/src/components/common/aq-backtest-metric-item.html
+++ b/src/components/common/aq-backtest-metric-item.html
@@ -11,12 +11,12 @@
 			}
 			h1, h2, h3, h4, h5 {  margin: 0;  }
 			.text-label{
-				font-size: 0.8em;
+				font-size: var(--aq-backtest-metric-item-text-label-font-size,0.8em);
 				font-weight: 300;
 			}
 			.text-content{
 				font-weight: 400;
-				font-size: 1em;
+				font-size: var(--aq-backtest-metric-item-text-content-font-size,1em);
 				margin-left: 5px;
 			}
 			.li-container {
