Fixed dialogs Added backtest header and list item elements (elements now auto adjust based on width) Fixed scrolling user login panel

--- a/src/components/aq-user-menu.html
+++ b/src/components/aq-user-menu.html
@@ -33,7 +33,7 @@
             border-bottom: 1px solid #dfdfdf;
             color: #24293d;
             width:100%;
-            background-color: #f2fbf7;--#e5f1f5;
+            background-color: white;
         }
 
         paper-button {
