--- a/src/components/common/aq-backtest-metric-item.html
+++ b/src/components/common/aq-backtest-metric-item.html
@@ -17,10 +17,12 @@
 			.text-content{
 				font-weight: 400;
 				font-size: 1em;
-				margin-left: 5px;
+				--margin-left: 5px;
 			}
 			.li-container {
 				text-align: center;
+				margin-top: 5px;
+				margin-bottom: 5px;
 			}
 		</style>
 		<div class="li-container">
