--- a/src/components/user/aq-user-login-panel.html
+++ b/src/components/user/aq-user-login-panel.html
@@ -43,7 +43,7 @@
             --margin-top: 100px;
             --color: white;
             margin: auto 0;
-            margin-bottom: 20px;
+            --margin-bottom: 10px;
             z-index: 2;
             opacity: 2 !important;
             --paper-card-header-color: teal;
@@ -76,7 +76,7 @@
             font-weight: 300;
         }
         .header-quant{
-            color:#F44336;
+            color:#cc6666;
         }
         .sub-header{
             color:#37474F;
@@ -108,20 +108,11 @@
 
         }
 
-        #userEmailInput {
-            --width: 320px;
-            --margin-left: -17px;
-            --margin-top: -50px;
-            --width: 100%;
-        }
-
-
-
         .input-fields {
             padding-top: 0.1em;
             width: 90%;
             margin: 0 auto;
-            margin-top: 1.2em;
+            margin-top: 5px
         }
 
         paper-checkbox {
@@ -192,7 +183,7 @@
 
         paper-button.signinButton {
             position: relative;
-            margin-top: 40px !important;
+            margin-top: 20px !important;
             background: teal;
             color: #fff;
             width: 100%;
@@ -306,6 +297,7 @@
                     </div>
                     <div class="dialog-fields" class="layout vertical">
 
+                        <form>
                         <template is="dom-if" if="{{isSignupMode(displayMode)}}">
 
                             <paper-input
@@ -317,7 +309,7 @@
                                     type="text"
                                     on-focus='onUserFirstNameFocus'
                                     on-blur='onUserFirstNameFocusOut'
-                                    no-label-float
+                                    n-label-float
                                     required
                                     max-length=15
                                     invalid='{{!isFirstNameValid(firstName, firstNameInFocus)}}'
@@ -393,7 +385,7 @@
                                     on-keydown="checkForKeys"></paper-input>
                         </template>
 
-
+                        </form>
 
                         <paper-button raised class="signinButton center-justified horizontal layout"
                                       on-tap="onInvokeAction">{{actionButtonLabel}}
