Search Page Design(Nightly Build)

--- a/src/components/help/aq-help-home.html
+++ b/src/components/help/aq-help-home.html
@@ -14,236 +14,258 @@
 <link rel="import" href="./aq-help-marked-item.html">
 
 <dom-module id="aq-help-home">
-  <style  include="iron-flex iron-flex-alignment iron-positioning"></style>
-   <style>
-    #panel {
-      height:100%;
-    }
+    <style include="iron-flex iron-flex-alignment iron-positioning"></style>
+    <style>
+        #panel {
+            height: 100%;
+        }
 
-    #mainPanel {
-      margin: 0 auto;
-      border-right: 1px solid;
-      background-color: #f3fbf7;
-      color: #24293d;
-    }
-    
-    .selectableCategories{
-      cursor: pointer;
-    }
-    
-    .selectableCategories:hover{
-      font-weight: bold;
-      cursor: pointer;
-    }
-    
-    .searchCategories{
-      --width: 90%;
-      --margin-left:0%;
-      padding-left:10px;
-      padding-right:10px;
-      background-color: white;
-    }
+        #mainPanel {
+            margin: 0 auto;
+            /*border-right: 1px solid;*/
+            background-color: #fff;
+            color: #24293d;
+        }
 
-    #drawerPanel {
-      background-color: #24293d;
-    }
+        .selectableCategories {
+            cursor: pointer;
+        }
 
-    paper-listbox {
-      background-color: #24293d;
-    }
-    
-    paper-item {
-      --paper-item-min-height:32px;
-      --paper-item: {
-        height:32px;
-        font-size: 16px;
-        color:white;
-      }
-      
-      --paper-item-selected:{
-        font-weight: bold;
-      }
+        .selectableCategories:hover {
+            font-weight: bold;
+            cursor: pointer;
+        }
 
-    }
+        .searchCategories {
+            --width: 90%;
+            --margin-left: 0%;
+            padding-left: 10px;
+            padding-right: 10px;
+            background-color: white;
+            font-size: 14px;
+            margin: 5px;
+        }
 
-    .Small {
-      padding-left: 20px;
-      font-size:15px;
-     }
+        #drawerPanel1 {
+            background-color: #fafafa;
+            border: none;
+            padding: 10px;
+        }
 
-    .Mini {
-      padding-left: 30px;
-      font-size:14px;
-    }
+        paper-listbox {
+            background-color: #fff;
+            margin-top: 10px;
+        }
 
-     .SMini {
-      padding-left: 40px;
-      font-size:13px;
-      font-style: italic;
-    }
+        paper-item {
+            --paper-item-min-height: 32px;
+            --paper-item: {
+                height: 32px;
+                font-size: 16px;
+                color: teal;
+                background-color: #fff;
+            };
+            --paper-item-selected: {
+                /*font-weight: bold;*/
+                background-color: #f7f7f7;
+            };
+            --paper-item-focused:{
+                background-color: #f7f7f7;
+            }
 
-    
-    #autoScrollSpy div {
-        padding-top:20px;
-        padding-bottom: 5px;
-        margin-left: 30px;
-        margin-right:30px;
-        --margin-bottom:40px;
-        --padding: 150px;
-        --border-bottom: 1px solid grey;
-        transition: background 0.2s;
-    }
+        }
 
-    #top {
-      padding-top: 300px;
-    }
+        .Normal {
+            font-size: 15px;
+        }
 
-    #bottom{
-      padding-bottom: 450px;
-    }
+        .Small {
+            padding-left: 20px;
+            font-size: 13px;
+            color: #7f7f7f;
+        }
 
-    img {
-      margin: auto 0;
-      max-height:650px;
+        .Mini {
+            padding-left: 30px;
+            font-size: 12px;
+            color: #7f7f7f;
+        }
 
-    }
+        .SMini {
+            padding-left: 40px;
+            font-size: 12px;
+            font-style: italic;
+            color: #7f7f7f;
+        }
 
-  </style>
- 
-  <template>
+        #autoScrollSpy div {
+            padding-top: 20px;
+            padding-bottom: 5px;
+            margin-left: 30px;
+            margin-right: 30px;
+            --margin-bottom: 40px;
+            --padding: 150px;
+            --border-bottom: 1px solid grey;
+            transition: background 0.2s;
+        }
 
-      <app-location route="{{route}}" use-hash-as-path></app-location>
+        #top {
+            padding-top: 300px;
+        }
 
-      <app-route
-          route="{{route}}"
-          pattern="/dashboard/help"
-          active="{{active}}">
-      </app-route>  
+        #bottom {
+            padding-bottom: 450px;
+        }
 
-      <iron-ajax url="../../../resources/help/data_help.json"
-        handle-as="json"
-        id="getHelpContentQuery"
-        on-response="onGetHelpContentSuccess"
-        debounce-duration="300"
-        loading='{{loading}}'>
-      </iron-ajax>
+        img {
+            margin: auto 0;
+            max-height: 650px;
 
-      <template is='dom-if' if='{{active}}'>
+        }
 
-      <aq-loading-progress loading='{{loading}}'></aq-loading-progress>
-        
-        <template is='dom-if' if='[[!loading]]'>
-        <paper-drawer-panel id="drawerPanel" right-drawer>
+        #drawer {
+            padding: 10px;
+        }
 
-            <paper-header-panel id='mainPanel' mode="seamed" main>
-                
-                <div id='top'></div>
-                
-                <iron-auto-scroll-spy scroll-duration=0 selected="{{scrollSelected}}" id="autoScrollSpy">
-                  <template is="dom-repeat" items="{{itemsHelpContent}}">      
-                    <div id='content' class="layout vertical"> 
-                    
-                    <aq-help-marked-item help-text = "[[item.text]]">
-                    </aq-help-marked-item>
+    </style>
 
-                    <template is='dom-if' if='[[item.img_src]]'>
-                      <img class="self-center" src="{{item.img_src}}">
-                    </template>
-                    
-                    </div>
+    <template>
+
+        <app-location route="{{route}}" use-hash-as-path></app-location>
+
+        <app-route
+                route="{{route}}"
+                pattern="/dashboard/help"
+                active="{{active}}">
+        </app-route>
+
+        <iron-ajax url="../../../resources/help/data_help.json"
+                   handle-as="json"
+                   id="getHelpContentQuery"
+                   on-response="onGetHelpContentSuccess"
+                   debounce-duration="300"
+                   loading='{{loading}}'>
+        </iron-ajax>
+
+        <template is='dom-if' if='{{active}}'>
+
+            <aq-loading-progress loading='{{loading}}'></aq-loading-progress>
+
+            <template is='dom-if' if='[[!loading]]'>
+                <paper-drawer-panel id="drawerPanel" right-drawer>
+
+                    <paper-header-panel id='mainPanel' mode="seamed" main>
+
+                        <!--<div id='top'></div>-->
+
+                        <iron-auto-scroll-spy scroll-duration=0 selected="{{scrollSelected}}" id="autoScrollSpy">
+                            <template is="dom-repeat" items="{{itemsHelpContent}}">
+                                <div id='content' class="layout vertical">
+
+                                    <aq-help-marked-item help-text="[[item.text]]">
+                                    </aq-help-marked-item>
+
+                                    <template is='dom-if' if='[[item.img_src]]'>
+                                        <img class="self-center" src="{{item.img_src}}">
+                                    </template>
+
+                                </div>
 
 
-                  </template>
-                </iron-auto-scroll-spy>
+                            </template>
+                        </iron-auto-scroll-spy>
 
-                <div id='bottom'></div>
-            </paper-header-panel>
+                        <div id='bottom'></div>
+                    </paper-header-panel>
 
-            <paper-header-panel id='drawerPanel' drawer mode="seamed">
-              <paper-input class="searchCategories" label="Search Help" on-keyup="search" id="search_input"></paper-input>
-                <paper-listbox selected="{{scrollSelected}}">   
-                  <template is="dom-repeat" items="{{categoriesArray}}">      
-                    <paper-item class$="selectableCategories [[item.Category.size]]">[[item.Category.value]]</paper-item>
-                  </template>
-                </paper-listbox>
-            </paper-header-panel>
+                    <paper-header-panel id='drawerPanel1' drawer mode="seamed">
+                        <paper-input class="searchCategories" label="Search Help" on-keyup="search"
+                                     id="search_input"></paper-input>
+                        <paper-listbox selected="{{scrollSelected}}">
+                            <template is="dom-repeat" items="{{categoriesArray}}">
+                                <paper-item class$="selectableCategories [[item.Category.size]]">
+                                    [[item.Category.value]]
+                                </paper-item>
+                            </template>
+                        </paper-listbox>
+                    </paper-header-panel>
 
 
-        </paper-drawer-panel>
-      </template>
+                </paper-drawer-panel>
+            </template>
+        </template>
+
     </template>
 
-  </template>
+    <script>
+        Polymer({
+            is: 'aq-help-home',
 
-  <script>
-    Polymer ({
-      is: 'aq-help-home',
+            properties: {
+                itemsHelpContent: {
+                    type: Object,
+                },
 
-      properties:{
-        itemsHelpContent: {
-          type: Object,
-        },
+                categoriesArray: {
+                    type: Array,
+                    value: [],
+                },
 
-        categoriesArray:{
-          type: Array,
-          value:[],
-        },
+                active: {
+                    type: Boolean,
+                    observer: '_activeChanged',
+                },
 
-        active: {
-          type: Boolean,
-          observer: '_activeChanged',
-        },
+                loading: {
+                    type: Boolean,
+                    observer: '_loadingChanged',
+                },
 
-        loading: {
-          type: Boolean,
-          observer:'_loadingChanged',
-        },
+            },
 
-      },
+            search: function () {
+                var search = this.$$('#search_input').value;
+                search = search.toLowerCase();
+                var parent = this;
+                var categoriesClass = Polymer.dom(this.root).querySelectorAll('.selectableCategories');
+                var text;
+                for (var i = 0; i < this.categoriesArray.length; i++) {
+                    text = parent.categoriesArray[i].Category.value.toLowerCase();
+                    if (text.indexOf(search) > -1) {
+                        categoriesClass[i].style.display = "block";
+                        categoriesClass[i].style.lineHeight = "3";
+                    }
+                    else {
+                        categoriesClass[i].style.display = "none";
+                    }
+                }
+            },
 
-      search: function(){
-        var search = this.$$('#search_input').value;
-        search = search.toLowerCase();
-        var parent = this;
-        var categoriesClass = Polymer.dom(this.root).querySelectorAll('.selectableCategories');
-        var text;
-        for(var i=0; i<this.categoriesArray.length;i++){
-          text = parent.categoriesArray[i].Category.value.toLowerCase();
-          if(text.indexOf(search) > -1){
-            categoriesClass[i].style.display="block";
-            categoriesClass[i].style.lineHeight="3";
-          }
-          else{
-            categoriesClass[i].style.display="none";
-          }
-        }
-      },
+            onGetHelpContentSuccess: function (e) {
+                this.set('itemsHelpContent', e.detail.response.Help);
+                var array = []
+                for (i in e.detail.response.Help) {
+                    array.push({"Category": e.detail.response.Help[i].header});
+                }
 
-      onGetHelpContentSuccess: function(e){
-        this.set('itemsHelpContent', e.detail.response.Help);
-        var array = []
-        for (i in e.detail.response.Help){
-          array.push({"Category":e.detail.response.Help[i].header});
-        }
+                this.set('categoriesArray', array);
 
-        this.set('categoriesArray', array); 
+            },
 
-      },
+            _loadingChanged: function (nLoading, oLoading) {
+                if (!nLoading) {
+                    this.async(function () {
+                        this.$$('#autoScrollSpy').scrollTarget = this.$$('#mainPanel').scroller;
+                    }, 200);
+                }
+            },
 
-      _loadingChanged: function(nLoading, oLoading) {
-        if(!nLoading) {
-            this.async(function(){
-              this.$$('#autoScrollSpy').scrollTarget = this.$$('#mainPanel').scroller;
-            }, 200);
-        }
-      },
+            _activeChanged: function (nAct, oAct) {
+                if (nAct) {
+                    this.$.getHelpContentQuery.generateRequest();
+                }
+            }
 
-      _activeChanged: function(nAct, oAct) {
-        if(nAct){
-          this.$.getHelpContentQuery.generateRequest();
-        }
-      }
-
-    });
-  </script>
+        });
+    </script>
 </dom-module>
