--- a/src/components/help/aq-help-marked-item.html
+++ b/src/components/help/aq-help-marked-item.html
@@ -14,25 +14,41 @@
 		}
 
 		code {
-			background-color: #ededed;
-			font-size:17px;
+			background-color: rgba(238,238,238,.35);
+            padding: 10px;
+			font-size:13px;
+            box-shadow: 0 1px 1px rgba(0,0,0,.125);
 		}
 
 		p {
-			font-size: 16px;
+			font-size: 14px;
+            color:#7f7f7f;
 		}
 
 		strong {
 			font-weight: bold;
-			font-size: 18px;
+			font-size: 16px;
 		}
 
 		em strong {
-			font-size:16px;
+			font-size:14px;
 			text-decoration: underline;
 			font-weight: bold;
 		}
-
+		.markdown-html:first-child h2 {
+			color:teal;
+            font-size: 16px;
+		}
+		.markdown-html ul{
+			list-style: none;
+		}
+		.markdown-html ul h3{
+			color:#cc4444;
+            font-size: 14px;
+		}
+        .markdown-html .aq-help-marked-item{
+            color:#7f7f7f;
+        }
 
 
 	</style>
