--- a/src/layouts/aq-analyze-main.html
+++ b/src/layouts/aq-analyze-main.html
@@ -89,12 +89,13 @@
                 return x;
 
             },
-            handleRtChange: function (e) {
+
+            /*handleRtChange: function (e) {
                 if(e.detail.index !== undefined) {
                     //alert("Route Changed Clicked, index is " + e.detail.index);
                     this.index = e.detail.index + 1;
                 }
-            }
+            }*/
 
         });
     </script>
