--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -318,6 +318,7 @@
                 dirtyBit: {
                     type: Number,
                     value: 1,
+                    observer:'_dirtyBitChanged',
                 },
 
                 deleteId: String,
@@ -697,6 +698,36 @@
             onSetDirtyBit: function (e) {
                 this.dirtyBit = e.detail;
             },
+
+            _dirtyBitChanged: function() {
+                if (this.dirtyBit == 1) {
+                  this.fetchResults(); 
+                }
+            },
+
+            checkForKeys: function (e) {
+                // check if 'esc' was pressed
+                if (e.keyCode === 27) {
+                    this.$$('#searchbox').value = "";
+                    this.$$('#searchbox').blur();
+                } else if (e.keyCode === 13) {
+                    this.debounce('search', this.search, 50);
+                }
+            },
+
+            blur: function () {
+                if (this.$$('#searchbox').value == "") {
+                    //this.$$('#menu-icons').style.display = 'inline';
+                    this.debounce('search', this.search, 50);
+                }
+            },
+
+            search: function () {
+                this.searchText = this.$$('#searchbox').value;
+                this.fire('search-action', {searchtext: this.searchText});
+
+            },
+
 
 
         });
